[gd_scene load_steps=5 format=3 uid="uid://dy6nmkeddte8n"]

[ext_resource type="Script" path="res://scripts/game/placeCard.gd" id="1_223m4"]
[ext_resource type="Texture2D" uid="uid://2cyd47uhn0nv" path="res://assets/card_front.jpg" id="1_qlsfw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60mjm"]
size = Vector2(199.5, 301)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ke1bp"]

[node name="Game" type="Node2D"]

[node name="cards" type="Node2D" parent="."]
z_index = 1
script = ExtResource("1_223m4")

[node name="card" type="Area2D" parent="cards"]
position = Vector2(129, 914)
metadata/_edit_group_ = true

[node name="cardSprite" type="Sprite2D" parent="cards/card"]
texture = ExtResource("1_qlsfw")

[node name="cardCollisionShape" type="CollisionShape2D" parent="cards/card"]
shape = SubResource("RectangleShape2D_60mjm")

[node name="cardspots" type="Node2D" parent="."]
z_index = -1
script = ExtResource("1_223m4")

[node name="cardspot1" type="Area2D" parent="cardspots"]
position = Vector2(254, 533)
metadata/_edit_group_ = true

[node name="cardspot1Sprite" type="Sprite2D" parent="cardspots/cardspot1"]
scale = Vector2(200, 300)
texture = SubResource("PlaceholderTexture2D_ke1bp")

[node name="cardspot1CollisionShape" type="CollisionShape2D" parent="cardspots/cardspot1"]
shape = SubResource("RectangleShape2D_60mjm")

[node name="cardspot2" type="Area2D" parent="cardspots"]

[node name="cardspot2Sprite" type="Sprite2D" parent="cardspots/cardspot2"]
position = Vector2(476, 528)
scale = Vector2(200, 300)
texture = SubResource("PlaceholderTexture2D_ke1bp")

[node name="cardspot2CollisionShape" type="CollisionShape2D" parent="cardspots/cardspot2"]
position = Vector2(476, 528)
shape = SubResource("RectangleShape2D_60mjm")

[node name="cardspot3" type="Area2D" parent="cardspots"]

[node name="cardspot3Sprite" type="Sprite2D" parent="cardspots/cardspot3"]
position = Vector2(682, 375)
scale = Vector2(200, 300)
texture = SubResource("PlaceholderTexture2D_ke1bp")

[node name="cardspot3CollisionShape" type="CollisionShape2D" parent="cardspots/cardspot3"]
position = Vector2(682, 375)
shape = SubResource("RectangleShape2D_60mjm")

[node name="cardspot4" type="Area2D" parent="cardspots"]

[node name="cardspot4Sprite" type="Sprite2D" parent="cardspots/cardspot4"]
position = Vector2(685, 692)
scale = Vector2(200, 300)
texture = SubResource("PlaceholderTexture2D_ke1bp")

[node name="cardspot4CollisionShape" type="CollisionShape2D" parent="cardspots/cardspot4"]
position = Vector2(685, 692)
shape = SubResource("RectangleShape2D_60mjm")

[node name="cardspot5" type="Area2D" parent="cardspots"]

[node name="cardspot5Sprite" type="Sprite2D" parent="cardspots/cardspot5"]
position = Vector2(894, 528)
scale = Vector2(200, 300)
texture = SubResource("PlaceholderTexture2D_ke1bp")

[node name="cardspot5CollisionShape" type="CollisionShape2D" parent="cardspots/cardspot5"]
position = Vector2(894, 528)
shape = SubResource("RectangleShape2D_60mjm")

[node name="cardspot6" type="Area2D" parent="cardspots"]

[node name="cardspot6Sprite" type="Sprite2D" parent="cardspots/cardspot6"]
position = Vector2(1115, 528)
scale = Vector2(200, 300)
texture = SubResource("PlaceholderTexture2D_ke1bp")

[node name="cardspot6CollisionShape" type="CollisionShape2D" parent="cardspots/cardspot6"]
position = Vector2(1115, 528)
shape = SubResource("RectangleShape2D_60mjm")

[node name="cardspot7" type="Area2D" parent="cardspots"]

[node name="cardspot7Sprite" type="Sprite2D" parent="cardspots/cardspot7"]
position = Vector2(1324, 364)
scale = Vector2(200, 300)
texture = SubResource("PlaceholderTexture2D_ke1bp")

[node name="cardspot7CollisionShape" type="CollisionShape2D" parent="cardspots/cardspot7"]
position = Vector2(1324, 364)
shape = SubResource("RectangleShape2D_60mjm")

[node name="cardspot8" type="Area2D" parent="cardspots"]

[node name="cardspot8Sprite" type="Sprite2D" parent="cardspots/cardspot8"]
position = Vector2(1330, 675)
scale = Vector2(200, 300)
texture = SubResource("PlaceholderTexture2D_ke1bp")

[node name="cardspot8CollisionShape" type="CollisionShape2D" parent="cardspots/cardspot8"]
position = Vector2(1330, 675)
shape = SubResource("RectangleShape2D_60mjm")

[node name="cardspot9" type="Area2D" parent="cardspots"]

[node name="cardspot9Sprite" type="Sprite2D" parent="cardspots/cardspot9"]
position = Vector2(1551, 528)
scale = Vector2(200, 300)
texture = SubResource("PlaceholderTexture2D_ke1bp")

[node name="cardspot9CollisionShape" type="CollisionShape2D" parent="cardspots/cardspot9"]
position = Vector2(1551, 528)
shape = SubResource("RectangleShape2D_60mjm")

[connection signal="input_event" from="cardspots/cardspot1" to="cardspots" method="_on_area_2d_input_event"]
